# environment

./: Makefile  pyproject.toml
blanks/: client.py
blanks/http_client/: example.py  main.py  unit_test.py
blanks/http_server/: example.py  main.py  unit_test.py
blanks/postgres_client/: example.py  functional_test.py  main.py
tests/: test_client.py
