[tool.poetry]
name = "pass"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
httpx = "^0.27.0"
sqlalchemy = "^2.0.30"
aiokafka = "^0.10.0"
aioboto3 = "^13.0.0"
tenacity = "^8.3.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"
polyfactory = "^2.16.0"
respx = "^0.21.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"